# sparks

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  PLAN.md  README.md  SECURITY.md  agents.md  config.example.toml  config.toml
.github/: PULL_REQUEST_TEMPLATE.md
docs/: README.md  alerts.md  architecture.md  autonomous-agents-epic-comparison.md  autopilot-e2e-smoke-2026-03-03-retry.md  conductor-athena-gap-analysis.md  eval-harness.md  eval-smoke.md  execution-contract-v1.md  feature-contract-v1.md  feature-contract-workflow.md  ghost-specialization.md  hygiene-baseline.json  local-only-deployment.md  maintainability-baseline.json  maintainability-map.md  mcp-integration.md  memory-hot-path-lru.md  mission-contract.md  observability-dashboard.md  openai-compatible-api.md  optimizer-tournament.md  orchestration-layer-100-plan.md  parsing-hardening-plan.md  prompt-scanner.md  quantflow-pilot-review.md  rust-audit-2026-03-02.md  secrets-vaultwarden.md  security-attestation.md  self-build-supervised-batch.md  self-improvement-architecture.md  self-improvement-roadmap.md  session-review-explainability.md  slack-setup.md  sonarqube-mcp.md  task-contract-v1.md  teams-setup.md  telegram-planning-spec.md  telephony-setup.md
eval/: benchmark-cli-smoke.json  benchmark-mini-ci.json  benchmark-real-gate.json  benchmark-suite.json  feature-contract-example.yaml  refactor-tidy-8h-tickets.txt  scenario-library-v1.json  self-build-supervised-tickets.example.txt
examples/: README.md  basic-dispatch.sh  custom-ghost.toml  feature-contract-linear.toml  feature-contract.toml
scripts/: athena-with-vaultwarden.sh  benchmark-proactive.sh  dead_code_check.py  demo-wrapper.sh  demo.tape  eval_cli_matrix.py  eval_dashboard.py  eval_harness.py  generate_improvement_backlog.py  hygiene_check.py  maintainability_check.py  mock_athena_dispatch.py  mock_linear_server.py  mock_sparks_dispatch.py  optimizer_tournament.py  refactor-tidy-loop.sh  restart-telegram.sh  run-real-gate.sh  seed-memories.sh  soak-autonomy.sh  soak-doctor.sh  sonarqube_gate.py  start-refactor-tidy-loop.sh  start-soak-autonomy.sh  supervised_self_build_batch.py  test_eval_dashboard.py  test_eval_harness.py  test_generate_improvement_backlog.py  test_optimizer_tournament.py  user_flow_harness.py  wiring_check.py
src/: alerts.rs  ci_monitor.rs  config.rs  confirm.rs  context_budget.rs  core.rs  cost.rs  db.rs  (+48 more)
(+41 files in other folders)
