[package]
name = "athena"
version = "0.1.0"
edition = "2021"
description = "Secure autonomous multi-agent system"

[features]
default = []
telegram = ["teloxide"]

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
rustyline = "14"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rusqlite = { version = "0.32", features = ["bundled-full"] }
bollard = "0.18"
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
dirs = "6"
async-trait = "0.1"
futures = "0.3"
base64 = "0.22"
teloxide = { version = "0.13", features = ["macros"], optional = true }
ort = "2.0.0-rc.11"
tokenizers = "0.21"
ndarray = "0.17"
rand = "0.8"
cron = "0.13"
