[package]
name = "athena"
version = "0.1.0"
edition = "2021"
description = "Secure autonomous multi-agent system"

[features]
default = []
telegram = ["teloxide"]
webhook = ["axum", "tower", "hmac"]

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
rustyline = "14"
axum = { version = "0.7", features = ["macros"], optional = true }
tower = { version = "0.5", optional = true }
reqwest = { version = "0.12", features = ["json", "blocking", "multipart", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rusqlite = { version = "0.32", features = ["bundled-full"] }
bollard = "0.18"
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
dirs = "6"
async-trait = "0.1"
futures = "0.3"
base64 = "0.22"
hmac = { version = "0.12", optional = true }
teloxide = { version = "0.13", features = ["macros"], optional = true }
ort = "2.0.0-rc.11"
tokenizers = "0.21"
ndarray = "0.17"
rand = "0.8"
hex = "0.4"
sha2 = "0.10"
url = "2"
cron = "0.13"
serde_yaml = "0.9"
tokio-stream = "0.1"
notify = "7"
sysinfo = "0.32"
humantime = "2"
dotenvy = "0.15"
keyring = "3"
rpassword = "7"
hnsw_rs = "0.3.2"
